--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -80,3 +80,80 @@
 		}
 	}
 }
+
+.header {
+	height: 70px;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 25px;
+  
+	.logo-container {
+	  height: 100%;
+	  width: 70px;
+	  padding: 25px;
+	}
+  
+	.options {
+		width: 50%;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+		margin-top: 15px;
+	
+		.option {
+			padding: 10px 15px;
+		}
+	}
+}
+
+.collection-preview {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 30px;
+  
+	.title {
+	  font-size: 28px;
+	  margin-bottom: 25px;
+	}
+  
+	.preview {
+	  display: flex;
+	  justify-content: space-between;
+	}
+}
+
+.collection-item {
+	width: 22%;
+	display: flex;
+	flex-direction: column;
+	height: 350px;
+	align-items: center;
+  
+	.image {
+	  width: 100%;
+	  height: 95%;
+	  background-size: cover;
+	  background-position: center;
+	  margin-bottom: 5px;
+	}
+  
+	.collection-footer {
+	  width: 100%;
+	  height: 5%;
+	  display: flex;
+	  justify-content: space-between;
+	  font-size: 18px;
+  
+	  .name {
+		width: 90%;
+		margin-bottom: 15px;
+	  }
+  
+	  .price {
+		width: 10%;
+	  }
+	}
+}
+  
