--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -74,5 +74,15 @@ $main-color: black;
 	  color: black;
 	  border: 1px solid black;
 	}
+
+	&.google-sign-in {
+		background-color: #4285f4;
+		color: white;
+
+		&:hover {
+			background-color: #357ae8;
+			border: none;
+		}
+	}
   }
   
