--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -175,6 +175,23 @@
 	}
 }
 
+.sign-up {
+	display: flex;
+	flex-direction: column;
+	width: 380px;
+
+	.title {
+		margin: 10px 0;
+	}
+}
+
+.sign-in-and-sign-up {
+	width: 850px;
+	display: flex;
+	justify-content: space-between;
+	margin: 30px auto;
+}
+
 * {
 	box-sizing: border-box;
 }
