--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -68,6 +68,8 @@ $main-color: black;
 	font-weight: bolder;
 	border: none;
 	cursor: pointer;
+	display: flex;
+	justify-content: center;
   
 	&:hover {
 	  background-color: white;
@@ -84,5 +86,17 @@ $main-color: black;
 			border: none;
 		}
 	}
-  }
+
+	&.inverted {
+		background-color: white;
+	  	color: black;
+	  	border: 1px solid black;
+
+		&:hover {
+			background-color: black;
+	  		color: white;
+	  		border: none;
+		}
+	}
+}
   
