--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -134,6 +134,7 @@
 	flex-direction: column;
 	height: 350px;
 	align-items: center;
+	position: relative;
   
 	.image {
 	  width: 100%;
@@ -141,6 +142,25 @@
 	  background-size: cover;
 	  background-position: center;
 	  margin-bottom: 5px;
+	}
+
+	.custom-button {
+		width: 80%;
+		opacity: 0.7;
+		position: absolute;
+		top: 240px;
+		display: none;
+	}
+
+	&:hover {
+		.image {
+			opacity: 0.8;
+		}
+
+		.custom-button {
+			opacity: 0.85;
+			display: flex;
+		}
 	}
   
 	.collection-footer {
