--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -8,21 +8,21 @@
 	cursor: pointer;
   
 	.shopping-icon {
-	  width: 24px;
-	  height: 24px;
+		width: 24px;
+		height: 24px;
 	}
   
 	.item-count {
-	  position: absolute;
-	  font-size: 10px;
-	  font-weight: bold;
-	  bottom: 12px;
+		position: absolute;
+		font-size: 10px;
+		font-weight: bold;
+		bottom: 12px;
 	}
 }
 
 .cart-dropdown {
 	position: absolute;
-	width: 240px;
+	width: 260px;
 	height: 340px;
 	display: flex;
 	flex-direction: column;
@@ -34,15 +34,37 @@
 	z-index: 5;
   
 	.cart-items {
-	  height: 240px;
-	  display: flex;
-	  flex-direction: column;
-	  overflow: scroll;
+		height: 240px;
+		display: flex;
+		flex-direction: column;
+		overflow: scroll;
 	}
   
 	button {
-	  margin-top: auto;
+		margin-top: auto;
 	}
-  }
+}
+
+.cart-item {
+	width: 100%;
+	display: flex;
+	height: 80px;
+	margin-bottom: 15px;
   
+	img {
+		width: 30%;
+	}
   
+	.item-details {
+		width: 70%;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: center;
+		padding: 10px 20px;
+
+		.name {
+		font-size: 16px;
+		}
+	}
+}
