--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -128,6 +128,11 @@
 	}
 }
 
+.collections-overview {
+	display: flex;
+	flex-direction: column;
+}
+
 .collection-item {
 	width: 22%;
 	display: flex;
