--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -134,7 +134,7 @@
 }
 
 .collection-item {
-	width: 22%;
+	width: 22vw;
 	display: flex;
 	flex-direction: column;
 	height: 350px;
@@ -169,20 +169,40 @@
 	}
   
 	.collection-footer {
-	  width: 100%;
-	  height: 5%;
-	  display: flex;
-	  justify-content: space-between;
-	  font-size: 18px;
+		width: 100%;
+		height: 5%;
+		display: flex;
+		justify-content: space-between;
+		font-size: 18px;
   
-	  .name {
-		width: 90%;
-		margin-bottom: 15px;
-	  }
+		.name {
+			width: 90%;
+			margin-bottom: 15px;
+		}
   
-	  .price {
-		width: 10%;
-	  }
+		.price {
+			width: 10%;
+		}
+	}
+}
+
+.collection-page {
+	display: flex;
+	flex-direction: column;
+  
+	.title {
+		font-size: 38px;
+		margin: 0 auto 30px;
+	}
+  
+	.items {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-gap: 10px;
+
+		& .collection-item {
+			margin-bottom: 30px;
+		}
 	}
 }
 
